--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Landing Page</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="flex-container">
+            <div class="one">
+                <h1>Header Logo</h1>
+                    <ul>
+                        <h3>Header link two</h3> 
+                        <h3>Header link three</h3>
+                        <h3>Header link four</h3>
+                    </ul>
+                </div>
+            </div>
+
+
+
+
+
+
+            <div class="two"></div>
+            <div class="three"></div>
+          </div>
+        
+        <script src="" async defer></script>
+    </body>
+</html>
